cluster/apps/omv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omv-svc
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
