cluster/apps/omv/ingress-traefikCRD.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: omv
  labels:
    app.kubernetes.io/name: omv
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: Host(`omv.${SECRET_DOMAIN_0}`)
      middlewares:
        - name: headers@file
        - name: local-only@file
      services:
        - name: omv
          port: 80
          namespace: default
  tls:
    secretName: ${SECRET_CERT_NAME_0}-prod-tls
